backend/tests/snapshots/golden_tools__recall.snap
---
source: tests/golden_tools.rs
expression: stable
---
{
  "results": [
    {
      "id": "memory:<id8>",
      "kind": "memory",
      "text": "Alice is a tea drinker at Acme",
      "source": null,
      "occurred_at": "<ts>",
      "score": "<unstable>",
      "arms_hit": 1,
      "vault": "vault:<id2>",
      "vault_name": "Personal"
    },
    {
      "id": "memory:<id3>",
      "kind": "memory",
      "text": "Alice likes green tea",
      "source": null,
      "occurred_at": "<ts>",
      "score": "<unstable>",
      "arms_hit": 1,
      "vault": "vault:<id2>",
      "vault_name": "Personal"
    }
  ]
}
